--- a/ranek/package.json
+++ b/ranek/package.json
@@ -35,7 +35,8 @@
       "eslint:recommended"
     ],
     "rules": {
-      "vue/html-quotes": "double"
+      "vue/html-quotes": "double",
+      "no-console": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
